# pgs_template_validator

./: .gcloudignore  .gitignore  README.md  app.yaml_template  main.py  pgs-catalog-cred.json_template  pgs_metadata_validator.py  pyproject.toml  requirements.txt
templates/: TemplateColumns2Models_v5.xlsx  TemplateColumns2Models_v5a.xlsx
validator/: demographic.py  efotrait.py  formula.py  generic.py  main_validator.py  metric.py  performance.py  publication.py  sample.py  score.py
validator/request/: config.py  connector.py
