[tool.poetry]
name = "pgs_template_validator"
version = "1.1.4"
description = "A validator for PGS Catalog templates"
homepage = "https://github.com/PGScatalog/pgs_template_validator"
authors = ["Laurent Gil <lg10@sanger.ac.uk>", "Florent Yvon <fy279@cam.ac.uk>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "validator"}]

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
